# github-dlr

./: .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
github_dl/: __init__.py  console.py  main.py  source.py
github_dlr/: console.py  loader.py  source.py
tests/: download_test.py  get_contents_test.py  normalize_test.py  source_test.py
