[tool.poetry]
name = "github-dl"
version = "0.1.0"
description = ""
authors = ["Rocktim Saikia <rocktimthedev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
argparse = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
github-dl = 'github_dl.console:cli'
gh-dl = 'github_dl.console:cli'
